--- a/build.gradle
+++ b/build.gradle
@@ -15,15 +15,16 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.projectlombok:lombok:1.18.24'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
     implementation 'org.junit.jupiter:junit-jupiter:5.9.0'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
-    testImplementation 'com.codeborne:selenide:6.7.4'
     implementation 'com.github.javafaker:javafaker:1.0.2'
     testImplementation 'io.rest-assured:rest-assured:5.2.0'
     testImplementation 'com.google.code.gson:gson:2.9.0'
     testImplementation 'org.seleniumhq.selenium:selenium-java:4.4.0'
     testImplementation 'io.rest-assured:json-schema-validator:5.2.0'
+    testImplementation 'com.codeborne:selenide:6.12.2'
+    testRuntimeOnly 'org.slf4j:slf4j-simple:2.0.3'
 }
 
 test {
